config: ⚙️ Update PostCSS configuration and dependencies for improved styles

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,7 +1,9 @@
 @import "tailwindcss/theme.css" layer(base);
 @import "tailwindcss/utilities.css" layer(utilities);
 
-
+@theme {
+  --*: initial;
+}
 
 @import './global/reset.css' layer(base);
 @import './global/fonts.css' layer(base);
