--- a/src/css/global/global-styles.css
+++ b/src/css/global/global-styles.css
@@ -9,7 +9,7 @@ body {
   color: var(--color-dark);
   font-size: var(--size-step-0);
   font-family: var(--font-base);
-  line-height: var(--leading-standard);
+  line-height: var(--leading-fine);
 }
 
 
