--- a/src/css/components/wrapper.css
+++ b/src/css/components/wrapper.css
@@ -5,8 +5,8 @@ A common wrapper/container
 
 .wrapper {
   margin-inline: auto;
-  max-width: clamp(16rem, var(--wrapper-max-width, 100vw), 80rem);
+  max-width: var(--wrapper-max-width);
   padding-left: var(--gutter);
   padding-right: var(--gutter);
-  position: relative;
+  position: relative
 }
