--- a/src/css/utilities/region.css
+++ b/src/css/utilities/region.css
@@ -1,7 +1,22 @@
-/* 
+/*
 REGION UTILITY
 Consistent block padding for page sections
 */
+
 .region {
-  padding-block: var(--region-space, var(--space-xl-2xl));
+  padding-block-end:var(--region-space);
+  padding-block-start: var(--region-space)
+}
+
+.region[data-flush=all] {
+  padding-block-end:0;
+  padding-block-start:0
+}
+
+.region[data-flush=top] {
+  padding-block-start:0
+}
+
+.region[data-flush=bottom] {
+  padding-block-end:0
 }
